k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yahari-app
  namespace: yahari-city
spec:
  selector:
    app: yahari-app
  ports:
    - port: 80
      targetPort: 3000
